--- a/sass/style.scss
+++ b/sass/style.scss
@@ -309,7 +309,7 @@ video {
 
 @media (min-width: 1200px) {
 	body {
-		// overflow-y: hidden;
+		overflow-y: hidden;
 		// overflow-x: auto;
 	}
 	.topside {
@@ -341,108 +341,166 @@ video {
 		display: none;
 	}
 
-	.nav {
-		display: flex;
-		position: fixed;
-		width: 100vw;
-		height: 100px;
-		transform: translateX(0);
-		box-shadow: -5px -5px 10px black;
-		background-color: white;
-		top: 0;
+	// .nav {
+	// 	display: flex;
+	// 	position: fixed;
+	// 	width: 100vw;
+	// 	height: 100px;
+	// 	transform: translateX(0);
+	// 	box-shadow: -5px -5px 10px black;
+	// 	background-color: white;
+	// 	top: 0;
 
-		&__items {
-			display: flex;
-		}
-		&__item {
-			display: flex;
-			color: #000;
-			font-size: 1.8rem;
-		}
+	// 	&__items {
+	// 		display: flex;
+	// 	}
+	// 	&__item {
+	// 		display: flex;
+	// 		color: #000;
+	// 		font-size: 1.8rem;
+	// 	}
 
-		&__logo {
-			position: absolute;
-			top: 60px;
-			left: 50px;
-			img {
-				width: 75px;
-				height: 75px;
-			}
-		}
-	}
+	// 	&__logo {
+	// 		position: absolute;
+	// 		top: 60px;
+	// 		left: 50px;
+	// 		img {
+	// 			width: 75px;
+	// 			height: 75px;
+	// 		}
+	// 	}
+	// }
 
-	.aboutme-container {
-		margin-top: 100px;
-		flex-direction: row;
+	// .aboutme-container {
+	// 	margin-top: 100px;
+	// 	flex-direction: row;
 
-		h1 {
-			display: none;
-		}
-		&__selfpictures {
-			// margin-left: 300px;
-			// margin-left: 100px;
-			// margin-right: 50px;
-			img {
-				min-width: 90px;
-				max-height: 70svh;
-				width: 60vh;
-				object-fit: cover;
-				height: auto;
-				vertical-align: middle;
-				font-style: italic;
-				background-repeat: no-repeat;
-				background-size: cover;
-				margin-top: 50px;
-				shape-margin: 1rem;
-				border-radius: 8px;
-				box-shadow: 5px 5px 10px rgb(75, 72, 72);
-			}
-		}
-		&__description {
-			font-family: 'Gruppo', sans-serif;
-			margin-right: 100px;
-			// margin-top: 100px;
-			.heading {
-				font-size: 2.5rem;
-				font-weight: bold;
-			}
+	// 	h1 {
+	// 		display: none;
+	// 	}
+	// 	&__selfpictures {
+	// 		// margin-left: 300px;
+	// 		// margin-left: 100px;
+	// 		// margin-right: 50px;
+	// 		img {
+	// 			min-width: 90px;
+	// 			max-height: 70svh;
+	// 			width: 60vh;
+	// 			object-fit: cover;
+	// 			height: auto;
+	// 			vertical-align: middle;
+	// 			font-style: italic;
+	// 			background-repeat: no-repeat;
+	// 			background-size: cover;
+	// 			margin-top: 50px;
+	// 			shape-margin: 1rem;
+	// 			border-radius: 8px;
+	// 			box-shadow: 5px 5px 10px rgb(75, 72, 72);
+	// 		}
+	// 	}
+	// 	&__description {
+	// 		font-family: 'Gruppo', sans-serif;
+	// 		margin-right: 100px;
+	// 		// margin-top: 100px;
+	// 		.heading {
+	// 			font-size: 2.5rem;
+	// 			font-weight: bold;
+	// 		}
 
-			p {
-				letter-spacing: 4px;
-			}
-		}
-	}
+	// 		p {
+	// 			letter-spacing: 4px;
+	// 		}
+	// 	}
+	// }
 }
-@media (min-width: 1800px) {
-	.aboutme-container {
-		// position: relative;
-		// grid-template-rows: 50px 1fr 50px;
+@media (min-width: 1200px) {
+	.aboutme-desktop {
+		display: grid;
+		grid-template-rows: 75px 1fr 75px;
 
-		&__selfpictures {
-			// position: absolute;
-			// margin-left: 300px;
-			// margin-right: 50px;
-			margin-left: 350px;
-			margin-bottom: 150px;
-		}
-		&__description {
-			font-family: 'Gruppo', sans-serif;
-			// margin-right: 100px;
-			// height: 100%;
-			// max-height: 100%;
-			// overflow-y: auto;
+		// overflow-y: hidden;
+		.nav {
+			position: fixed;
+			grid-row: 1/2;
+			max-height: 75px;
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: flex-start;
+			transform: translateX(0);
+			background-color: #fff;
+			box-shadow: -5px -5px 10px black;
 
-			.heading {
-				font-size: 2.5rem;
-				font-weight: bold;
-				// padding-top: 200px;
-				// margin-top: 200px;
+			&__items {
+				display: flex;
+			}
+			&__item {
+				padding: 0 60px;
+				font-size: 1.5rem;
+				color: #000;
 			}
 
-			p {
-				font-size: 1.4rem;
-				letter-spacing: 3px;
-				padding: 20px;
+			&__logo {
+				position: fixed;
+				margin-top: 70px;
+				margin-right: 1500px;
+				width: 75px;
+				img {
+					max-height: 75px;
+				}
+			}
+		}
+
+		.aboutme-container {
+			display: grid;
+			grid-row: 2/3;
+			grid-template-columns: 1fr 1fr;
+			margin-bottom: 100px;
+			h1 {
+				display: none;
+			}
+			&__selfpictures {
+				img {
+					min-width: 90px;
+					max-height: 70svh;
+					width: 60vh;
+					object-fit: cover;
+					height: auto;
+					vertical-align: middle;
+					font-style: italic;
+					background-repeat: no-repeat;
+					background-size: cover;
+					margin-top: 50px;
+					shape-margin: 1rem;
+					border-radius: 8px;
+					box-shadow: 5px 5px 10px rgb(75, 72, 72);
+				}
+			}
+
+			&__description {
+				
+				display: flex;
+				justify-content: center;
+				flex-direction: column;
+				justify-content: space-between;
+				align-content: flex-end;
+
+				h2 {
+					font-size: 2.5rem;
+					margin-bottom: 100px;
+				}
+			}
+			.story {
+				// padding-right: 100px;
+				// grid-row: 2/3;
+				p {
+					letter-spacing: 2px;
+					float: left;
+					margin-bottom: 4%;
+				}
+			}
+
+			.footer {
+				grid-row: 3 / 4;
 			}
 		}
 	}
