--- a/sass/style.scss
+++ b/sass/style.scss
@@ -267,6 +267,133 @@ video {
 	}
 }
 
+.portfolio-container {
+	min-height: 100svh;
+	// display: grid;
+	// grid-template-columns: repeat(12, 1fr);
+	// grid-template-rows: repeat(12, 1fr);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+	h1 {
+		grid-column: 1/12;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		// margin: 25px 0 25px 0;
+		margin-top: 25px;
+		font-weight: bold;
+	}
+	h1::after {
+		content: '';
+		width: 15%;
+		height: 2px;
+		background-color: black;
+	}
+
+	.portfolio {
+		display: flex;
+		flex-direction: column;
+		// min-height: 100svh;
+		margin-top: 20px;
+		margin-bottom: 50px;
+		&__box {
+			min-height: 70svh;
+			grid-column: 1/13;
+			grid-row: 1/13;
+			display: grid;
+			grid-template-columns: repeat(12, 1fr);
+			grid-template-rows: repeat(16, 1fr);
+			margin: 0 20px;
+			gap: 10px;
+			border-radius: 8px;
+			box-shadow: 5px 5px 10px rgb(75, 72, 72);
+			margin: 30px 20px;
+			// background-color: #2f5f56;
+
+			.img1 {
+				grid-column: 2/7;
+				grid-row: 2/10;
+				// background-color: #be9c51;
+			}
+			.img2 {
+				grid-column: 7/12;
+				grid-row: 4/13;
+				// background-color: red;
+			}
+			.title {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				grid-row: 15/16;
+				grid-column: 1/13;
+				font-size: 1.9rem;
+				a {
+					color: #000;
+				}
+				a::after {
+					content: '';
+					width: 15%;
+					height: 2px;
+					background-color: black;
+				}
+			}
+
+			a:aafter {
+				content: '';
+				width: 15%;
+				height: 2px;
+				background-color: black;
+			}
+
+			&__box2 {
+				margin-top: 50px;
+			}
+
+			img {
+				min-height: 100%;
+				width: 100%;
+				object-fit: cover;
+				height: auto;
+				vertical-align: middle;
+				font-style: italic;
+				background-repeat: no-repeat;
+				background-size: cover;
+				// margin-top: 50px;
+				shape-margin: 1rem;
+				border-radius: 8px;
+				box-shadow: 5px 5px 10px rgb(75, 72, 72);
+			}
+
+			// gap: 20px;
+			// justify-content: center;
+			// align-items: center;
+
+			// &__box {
+			// 	// height: 100svh;
+			// }
+			// &__images {
+			// }
+			// &__image {
+			// 	grid-column: 2/4;
+
+			// 	// height: 70%;
+		}
+
+		// &__title {
+		// 	// grid-row: 1/1;
+		// 	// display: flex;
+		// 	// justify-content: center;
+		// 	// h2 {
+		// 	// 	margin: 2px;
+		// 	// }
+		// }
+	}
+}
+
 .footer {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -500,6 +627,11 @@ video {
 			}
 		}
 	}
+
+	// .portfolio-container {
+	// 	display: grid;
+	// 	grid-template-columns: repeat(6, 30sw);
+	// }
 }
 @media (max-width: 1200px) {
 	.nav {
