--- a/sass/style.scss
+++ b/sass/style.scss
@@ -393,6 +393,62 @@ video {
 		// }
 	}
 }
+.peachholiday-container,.modernclasic-container {
+	// min-height: 100svh;
+	// display: grid;
+	// grid-template-columns: repeat(12, 1fr);
+	// grid-template-rows: repeat(12, 1fr);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	h1 {
+		// grid-column: 1/12;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		// margin: 25px 0 25px 0;
+		margin-top: 25px;
+		font-weight: bold;
+	}
+	h1::after {
+		content: '';
+		margin-top: 10px;
+		margin-bottom: 50px;
+		width: 15%;
+		height: 2px;
+		background-color: black;
+	}
+
+	.peachholiday, .modernclasic {
+		// display: grid;
+		// grid-template-columns: ;
+		&__images {
+
+			display: grid;
+			grid-template-columns: repeat(20, 1fr);
+			padding-bottom: 60px;
+			// grid-template-rows: repeat(20, 1fr);
+			img {
+				grid-column: 3/19;
+				min-height: 100%;
+				width: 100%;
+				object-fit: cover;
+				height: auto;
+				vertical-align: middle;
+				font-style: italic;
+				background-repeat: no-repeat;
+				background-size: cover;
+				// margin-top: 50px;
+				shape-margin: 1rem;
+				border-radius: 8px;
+				box-shadow: 5px 5px 10px rgb(75, 72, 72);
+			}
+		}
+	}
+}
 
 .footer {
 	display: grid;
