--- a/css/style.css
+++ b/css/style.css
@@ -556,22 +556,9 @@ video {
   display: grid;
   grid-template-columns: repeat(30, 1fr);
   grid-template-rows: repeat(30, 1fr);
+  gap: 30px;
 }
-.publication-container__publication {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(12, 1fr);
-  grid-column: 3/14;
-  grid-row: 5/20;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.publication-container__publication .modivo {
-  position: relative;
+.publication-container .pub1, .publication-container .pub2, .publication-container .pub3, .publication-container .pub4, .publication-container .pub5, .publication-container .pub6, .publication-container .pub7, .publication-container .pub8 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -582,39 +569,50 @@ video {
       -ms-flex-align: center;
           align-items: center;
 }
-.publication-container__publication .modivo ::before {
-  position: absolute;
-  content: url(../img/Brzoskwiniowelato/1.jpg);
-  left: 800px;
-  max-height: 250px;
-  max-width: 100px;
-  opacity: 0;
-}
-.publication-container__publication .modivo a:hover::before {
-  opacity: 1;
-}
-.publication-container__publication .aple {
+.publication-container .pub1 {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  grid-column: 5/9;
+  grid-row: 9/10;
 }
-.publication-container__publication .aple ::before {
+.publication-container .pub1::before {
+  background-image: url("../img/Brzoskwiniowelato/1.jpg");
+  background-size: cover;
   position: absolute;
-  content: url(../img/Brzoskwiniowelato/2.jpg);
-  left: 800px;
-  max-height: 250px;
-  max-width: 100px;
-  opacity: 0;
+  content: "";
+  min-width: 250px;
+  height: 300px;
+  display: none;
 }
-.publication-container__publication .aple a:hover::before {
-  opacity: 1;
+.publication-container .pub1:hover::before {
+  display: block;
+}
+.publication-container .pub2 {
+  grid-column: 5/9;
+  grid-row: 10/11;
+}
+.publication-container .pub3 {
+  grid-column: 5/9;
+  grid-row: 11/12;
+}
+.publication-container .pub4 {
+  grid-column: 5/9;
+  grid-row: 12/13;
+}
+.publication-container .pub5 {
+  grid-column: 5/9;
+  grid-row: 13/14;
+}
+.publication-container .pub6 {
+  grid-column: 5/9;
+  grid-row: 14/15;
+}
+.publication-container .pub7 {
+  grid-column: 5/9;
+  grid-row: 15/16;
+}
+.publication-container .pub8 {
+  grid-column: 5/9;
+  grid-row: 16/17;
 }
 
 .footer {
