--- a/sass/style.scss
+++ b/sass/style.scss
@@ -457,88 +457,163 @@ video {
 	}
 }
 
-.publication-container {
+
+.publication-container{
 	// position: relative;
 	min-height: 100svh;
 	display: grid;
-	grid-template-columns: repeat(30, 1fr);
-	grid-template-rows: repeat(30, 1fr);
-	// bottom: 0;
-	&__publication {
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: repeat(12, 1fr);
-		grid-column: 3/14;
-		grid-row: 5 /20;
+	grid-template-columns: repeat(30,1fr);
+	grid-template-rows: repeat(30,1fr);
+	gap: 30px;
+
+	.pub1, .pub2, .pub3, .pub4, .pub5, .pub6, .pub7, .pub8{
+		display: flex;
 		justify-content: center;
-		align-items: center;
-		.modivo {
-			position: relative;
-			
+		align-items: center;			
+	}
 
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			// grid-row: ;
-			::before {
-				position: absolute;
-				// position: fixed;
-	
-				content: url(../img/Brzoskwiniowelato/1.jpg);
-				left: 800px;
-				max-height: 250px;
-				max-width: 100px;
-				// grid-column: 20/30;
-				// grid-row: 1/6;
-				// display: none;
-				// left: px;
-				// right: 50px;
-				opacity: 0;
-				// display: none;
-			}
-	
-			a:hover::before {
-				// display: block;
-				opacity: 1;
-			}
-		}
-		.aple {
-			position: relative;
-			
-
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			// grid-row: ;
-			::before {
-				position: absolute;
-				// position: fixed;
-	
-				content: url(../img/Brzoskwiniowelato/2.jpg);
-				left: 800px;
-				max-height: 250px;
-				max-width: 100px;
-				// grid-column: 20/30;
-				// grid-row: 1/6;
-				// display: none;
-				// left: px;
-				// right: 50px;
-				opacity: 0;
-				// display: none;
-			}
-	
-			a:hover::before {
-				// display: block;
-				opacity: 1;
-			}
-		}
-
-			
-		}
+	.pub1{
+		position: relative;
+		grid-column: 5/9;
+		grid-row: 9/10;
 		
-
+	}
+	.pub1::before{
+		background-image: url('../img/Brzoskwiniowelato/1.jpg');
+		background-size: cover;
+		position: absolute;
+		content: '';
+		min-width: 250px;
+		height:300px;
+		// min-height: 100%;
+		display: none;
 		
+	}
+	.pub1:hover::before{
+		// opacity: 1;
+		display: block;
+		
+	
+	}
+	.pub2{
+		grid-column: 5/9;
+		grid-row: 10/11;
+	}
+	// .pub2::before{
+	// 	position: absolute;
+	// 	content: url(../img/Brzoskwiniowelato/2.jpg);
+	// 	height: 100px;
+	// 	width: 100px;
+	// }
+	.pub3{
+		grid-column: 5/9;
+		grid-row: 11/12;
+	}
+	.pub4{
+		grid-column: 5/9;
+		grid-row: 12/13;
+	}
+	.pub5{
+		grid-column: 5/9;
+		grid-row: 13/14;
+	}
+	.pub6{
+		grid-column: 5/9;
+		grid-row: 14/15;
+	}
+	.pub7{
+		grid-column: 5/9;
+		grid-row: 15/16;
+	}
+	.pub8{
+		grid-column: 5/9;
+		grid-row: 16/17;
+	}
+	
 }
+
+// .publication-container {
+// 	// position: relative;
+// 	min-height: 100svh;
+// 	display: grid;
+// 	grid-template-columns: repeat(30, 1fr);
+// 	grid-template-rows: repeat(30, 1fr);
+// 	// bottom: 0;
+// 	&__publication {
+// 		display: grid;
+// 		grid-template-columns: 1fr;
+// 		grid-template-rows: repeat(12, 1fr);
+// 		grid-column: 3/14;
+// 		grid-row: 5 /20;
+// 		justify-content: center;
+// 		align-items: center;
+// 		.modivo {
+// 			position: relative;
+			
+
+// 			display: flex;
+// 			justify-content: center;
+// 			align-items: center;
+// 			// grid-row: ;
+// 			::before {
+// 				position: absolute;
+// 				// position: fixed;
+	
+// 				content: url(../img/Brzoskwiniowelato/1.jpg);
+// 				left: 800px;
+// 				max-height: 250px;
+// 				max-width: 100px;
+// 				// grid-column: 20/30;
+// 				// grid-row: 1/6;
+// 				// display: none;
+// 				// left: px;
+// 				// right: 50px;
+// 				opacity: 0;
+// 				// display: none;
+// 			}
+	
+// 			a:hover::before {
+// 				// display: block;
+// 				opacity: 1;
+// 			}
+// 		}
+// 		.aple {
+// 			position: relative;
+			
+
+// 			display: flex;
+// 			justify-content: center;
+// 			align-items: center;
+// 			// grid-row: ;
+// 			::before {
+// 				position: absolute;
+// 				// position: fixed;
+	
+// 				content: url(../img/Brzoskwiniowelato/2.jpg);
+// 				left: 800px;
+// 				max-height: 250px;
+// 				max-width: 100px;
+// 				// grid-column: 20/30;
+// 				// grid-row: 1/6;
+// 				// display: none;
+// 				// left: px;
+// 				// right: 50px;
+// 				opacity: 0;
+// 				// display: none;
+// 			}
+	
+// 			a:hover::before {
+// 				// display: block;
+// 				opacity: 1;
+// 			}
+// 		}
+
+			
+// 		}
+		
+
+		
+// }
 
 .footer {
 	display: grid;
