--- a/css/style.css
+++ b/css/style.css
@@ -554,11 +554,12 @@ video {
 .publication-container {
   min-height: 100svh;
   display: grid;
-  grid-template-columns: repeat(30, 1fr);
-  grid-template-rows: repeat(30, 1fr);
+  margin-top: 50px;
+  margin-bottom: 70px;
+  grid-template-rows: repeat(10, 1fr);
   gap: 30px;
 }
-.publication-container .pub1, .publication-container .pub2, .publication-container .pub3, .publication-container .pub4, .publication-container .pub5, .publication-container .pub6, .publication-container .pub7, .publication-container .pub8 {
+.publication-container h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -568,51 +569,47 @@ video {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #000;
 }
-.publication-container .pub1 {
-  position: relative;
-  grid-column: 5/9;
-  grid-row: 9/10;
+
+.pub1,
+.pub2,
+.pub3,
+.pub4,
+.pub5,
+.pub6,
+.pub7,
+.pub8,
+.pub9 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-inline: 20px;
+  -webkit-box-shadow: 5px 5px 10px rgb(75, 72, 72);
+          box-shadow: 5px 5px 10px rgb(75, 72, 72);
+  border-radius: 8px;
 }
-.publication-container .pub1::before {
-  background-image: url("../img/Brzoskwiniowelato/1.jpg");
-  background-size: cover;
-  position: absolute;
-  content: "";
-  min-width: 250px;
-  height: 300px;
-  display: none;
-}
-.publication-container .pub1:hover::before {
-  display: block;
-}
-.publication-container .pub2 {
-  grid-column: 5/9;
-  grid-row: 10/11;
-}
-.publication-container .pub3 {
-  grid-column: 5/9;
-  grid-row: 11/12;
-}
-.publication-container .pub4 {
-  grid-column: 5/9;
-  grid-row: 12/13;
-}
-.publication-container .pub5 {
-  grid-column: 5/9;
-  grid-row: 13/14;
-}
-.publication-container .pub6 {
-  grid-column: 5/9;
-  grid-row: 14/15;
-}
-.publication-container .pub7 {
-  grid-column: 5/9;
-  grid-row: 15/16;
-}
-.publication-container .pub8 {
-  grid-column: 5/9;
-  grid-row: 16/17;
+.pub1 a,
+.pub2 a,
+.pub3 a,
+.pub4 a,
+.pub5 a,
+.pub6 a,
+.pub7 a,
+.pub8 a,
+.pub9 a {
+  padding-block: 10px;
+  margin-inline: 20px;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  color: #000;
+  text-decoration: none;
 }
 
 .footer {
