--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ video {
   height: 2px;
   background-color: black;
 }
-.portfolio-container .portfolio__box a:aafter {
+.portfolio-container .portfolio__box a:after {
   content: "";
   width: 15%;
   height: 2px;
@@ -769,7 +769,30 @@ video {
     float: left;
     margin-bottom: 4%;
   }
-  .aboutme-desktop .aboutme-container .footer {
+  .portfolio-container {
+    overflow-y: hidden;
+    overflow-x: scroll;
+    width: 100%;
+  }
+  .portfolio-container h1 {
+    display: none;
+  }
+  .portfolio {
+    display: grid;
+    grid-template-columns: repeat(6, 33vw);
+    grid-template-rows: repeat(6, 33vw);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100svh;
+    width: 300%;
+  }
+  .portfolio__box {
+    width: 33vw;
+    height: 80vh;
+    margin-top: 100px;
+  }
+  .footer {
     grid-row: 3/4;
   }
 }
