--- a/sass/style.scss
+++ b/sass/style.scss
@@ -296,6 +296,7 @@ video {
 
 	.portfolio {
 		display: flex;
+		// display: block;
 		flex-direction: column;
 		// min-height: 100svh;
 		margin-top: 20px;
@@ -739,27 +740,31 @@ video {
 		}
 	}
 	.portfolio-container {
-		overflow-y: hidden;
-		overflow-x: scroll;
+		
+	
+		display: grid;
+		grid-template-columns: repeat(6, 33vw);
+		align-items: center;
+		height: 100svh;
 		width: 100%;
 
 		h1 {
 			display: none;
 		}
 	}
-	.portfolio {
-		display: grid;
-		grid-template-columns: repeat(6, 33vw);
-		grid-template-rows: repeat(6, 33vw);
+	.portfolio{
+		display: flex;
+		justify-content: space-around;
 		align-items: center;
-		height: 100svh;
-		width: 300%;
-	}
-	.portfolio__box {
-		width: 33vw;
+		width: 300vw;
 		height: 80vh;
 		margin-top: 100px;
+		&__box{
+			width: 33vw;
+			height: 80vh;	
+		}
 	}
+	
 
 	.footer {
 		grid-row: 3 / 4;
