--- a/sass/style.scss
+++ b/sass/style.scss
@@ -550,9 +550,10 @@ video {
 
 //MediaQuery on Desktop
 
+
 @media (min-width: 1200px) {
 	body {
-		overflow-y: hidden;
+		// overflow-y: hidden;
 		// overflow-x: auto;
 	}
 	.topside {
@@ -583,80 +584,6 @@ video {
 	.burger-btn {
 		display: none;
 	}
-
-	// .nav {
-	// 	display: flex;
-	// 	position: fixed;
-	// 	width: 100vw;
-	// 	height: 100px;
-	// 	transform: translateX(0);
-	// 	box-shadow: -5px -5px 10px black;
-	// 	background-color: white;
-	// 	top: 0;
-
-	// 	&__items {
-	// 		display: flex;
-	// 	}
-	// 	&__item {
-	// 		display: flex;
-	// 		color: #000;
-	// 		font-size: 1.8rem;
-	// 	}
-
-	// 	&__logo {
-	// 		position: absolute;
-	// 		top: 60px;
-	// 		left: 50px;
-	// 		img {
-	// 			width: 75px;
-	// 			height: 75px;
-	// 		}
-	// 	}
-	// }
-
-	// .aboutme-container {
-	// 	margin-top: 100px;
-	// 	flex-direction: row;
-
-	// 	h1 {
-	// 		display: none;
-	// 	}
-	// 	&__selfpictures {
-	// 		// margin-left: 300px;
-	// 		// margin-left: 100px;
-	// 		// margin-right: 50px;
-	// 		img {
-	// 			min-width: 90px;
-	// 			max-height: 70svh;
-	// 			width: 60vh;
-	// 			object-fit: cover;
-	// 			height: auto;
-	// 			vertical-align: middle;
-	// 			font-style: italic;
-	// 			background-repeat: no-repeat;
-	// 			background-size: cover;
-	// 			margin-top: 50px;
-	// 			shape-margin: 1rem;
-	// 			border-radius: 8px;
-	// 			box-shadow: 5px 5px 10px rgb(75, 72, 72);
-	// 		}
-	// 	}
-	// 	&__description {
-	// 		font-family: 'Gruppo', sans-serif;
-	// 		margin-right: 100px;
-	// 		// margin-top: 100px;
-	// 		.heading {
-	// 			font-size: 2.5rem;
-	// 			font-weight: bold;
-	// 		}
-
-	// 		p {
-	// 			letter-spacing: 4px;
-	// 		}
-	// 	}
-	// }
-}
-@media (min-width: 1200px) {
 	.aboutme-desktop {
 		display: grid;
 		grid-template-rows: 75px 1fr 75px;
@@ -742,24 +669,27 @@ video {
 	.portfolio-container {
 		
 	
-		display: grid;
-		grid-template-columns: repeat(6, 33vw);
+		display: flex;
+		justify-content: space-around;
 		align-items: center;
-		height: 100svh;
-		width: 100%;
+		flex-direction: column;
+		width: 33vw;
+		height: 80vh;
+		margin-top: 100px;	
 
 		h1 {
 			display: none;
 		}
 	}
 	.portfolio{
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		width: 300vw;
-		height: 80vh;
-		margin-top: 100px;
+		position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	margin-bottom: -300px;
 		&__box{
+			display: inline-block;
 			width: 33vw;
 			height: 80vh;	
 		}
