--- a/sass/style.scss
+++ b/sass/style.scss
@@ -667,32 +667,45 @@ video {
 		}
 	}
 	.portfolio-container {
-		
+		// position: relative;
 	
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		flex-direction: column;
-		width: 33vw;
-		height: 80vh;
-		margin-top: 100px;	
+		// display: flex;
+		// justify-content: space-around;
+		// align-items: center;
+		// flex-direction: column;
+		// width: 33vw;
+		// height: 80vh;
+		// margin-top: 100px;	
 
 		h1 {
 			display: none;
 		}
 	}
-	.portfolio{
-		position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	.portfolio, 
+	.portfolio1, 
+	.portfolio2{
+		position: absolute;
+		top: 100px;
+		transform: translateX(-50%, -50%);
 	
-	margin-bottom: -300px;
+	
 		&__box{
-			display: inline-block;
+			// display: inline-block;
 			width: 33vw;
-			height: 80vh;	
+			height: 70vh;	
+			
+	
+			
 		}
+	}
+	.portfolio{
+		left: 1%;
+	}
+	.portfolio1{
+		left: 40%;
+	}
+	.portfolio2{
+		left: 80%;
 	}
 	
 
