--- a/css/style.css
+++ b/css/style.css
@@ -764,43 +764,31 @@ video {
     float: left;
     margin-bottom: 4%;
   }
-  .portfolio-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 33vw;
-    height: 80vh;
-    margin-top: 100px;
-  }
   .portfolio-container h1 {
     display: none;
   }
-  .portfolio {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-bottom: -300px;
+  .portfolio,
+  .portfolio1,
+  .portfolio2 {
+    position: absolute;
+    top: 100px;
+    -webkit-transform: translateX(-50%, -50%);
+            transform: translateX(-50%, -50%);
   }
-  .portfolio__box {
-    display: inline-block;
+  .portfolio__box,
+  .portfolio1__box,
+  .portfolio2__box {
     width: 33vw;
-    height: 80vh;
+    height: 70vh;
+  }
+  .portfolio {
+    left: 1%;
+  }
+  .portfolio1 {
+    left: 40%;
+  }
+  .portfolio2 {
+    left: 80%;
   }
   .footer {
     grid-row: 3/4;
